--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.leadsquared</groupId>
+	<groupId>com</groupId>
 	<artifactId>employeeManagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>employeeManagement</name>
